[wcag] Fix contrast issues in stages

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -404,20 +404,21 @@ span.caret {
 
   & .highlight {
     text-indent: 0 !important;
+    color: @grey4;
   }
 
-  & .active {
+  & li.active {
     &:after {
-      border-top-color: @primary5;
-      border-bottom-color: @primary5;
+      border-top-color: @primary3;
+      border-bottom-color: @primary3;
     }
 
     &:before {
-      color: @primary5;
+      color: @primary3;
     }
 
     & .highlight {
-      background: @primary5;
+      background: @primary3;
     }
   }
 }
